--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,4 +1,5 @@
 .menu-item{
+    position: relative;
     min-width: 30%;
     height:240px;
     flex:1 1 auto;
@@ -6,10 +7,18 @@
     align-items: center;
     justify-content: center;
     margin: 0 7.5px 15px;
+    background-position: center;
+    background-size: cover;
     overflow: hidden;
-   
     &.large{
         height: 380px;
+    }
+
+    .background-image{
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
     }
     
     &:first-child{
@@ -18,14 +27,8 @@
     &:last-child{
         margin-left: 7.5px;
     }
-    .background-image{
-        width: 100%;
-        height: 100%;
-        background-position: center;
-        background-size: cover;
-    }
     .content{
-        position:absolute;
+        position: absolute;
         background: #fff;
         height:90px;
         padding: 0 25px;
@@ -34,7 +37,6 @@
         align-items: center;
         justify-content: center;
         opacity: .7;
-
         .title{
             font-weight: bold;
             margin-bottom: 6px;
@@ -47,7 +49,7 @@
         }
     }
     &:hover{
-        cursor: pointer;
+        cursor:pointer;
         .background-image{
             transform: scale(1.1);
             transition: transform 6s cubic-bezier(0.25,0.45,0.45,0.95);
@@ -56,4 +58,8 @@
             opacity: 0.9;
         }
     }
+    @media screen and (max-width:500px) {
+        width:100%;
+    }
 }
+
