--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -10,10 +10,6 @@
     background-position: center;
     background-size: cover;
     overflow: hidden;
-    &.large{
-        height: 380px;
-    }
-
     .background-image{
         width: 100%;
         height: 100%;
@@ -58,8 +54,16 @@
             opacity: 0.9;
         }
     }
-    @media screen and (max-width:500px) {
+    @media screen and (max-width:610px) {
         width:100%;
+        &.large{
+            height: 240px;
+        }
+    }
+    @media screen and (min-width:611px) {
+        &.large{
+            height: 380px;
+        }
     }
 }
 
